--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <body>
     <div class="session">
       <div class="left">
@@ -68,3 +69,4 @@
     </div>
   
   </body>
+  <app-footer></app-footer>
